test/valid/58215_somaSub/somaSub.agu
-- Author: 58215, Manuel Lourenço

let soma (x,y) : Int -> Int -> Int =
    x + y

let sub (x,y) : Int -> Int -> Int =
    x - y

let main : Unit = 
    let var : Int = soma(sub(sub(1, 2), 7), 3);
    print(var)