test/invalid-syntax/58215_capitalL/capitalL.agu
-- Author: 58215, Manuel Lourenço

Let x : int = 5;

let main : Unit = 
    print(x)